ProConDuck/staticfiles/blog/assets/NewsFeed/css/style.css
/* ... */
.pagination > li > a:hover, .pagination > li > a:focus{background-color:#d083cf; color:#fff; border-color:#d083cf}
.pagination > li:first-child > a, .pagination > li:first-child > span{border-bottom-left-radius:0; border-top-left-radius:0}
.pagination > li:last-child > a, .pagination > li:last-child > span{border-bottom-right-radius:0; border-top-right-radius:0}
.single_page{float:left; display:inline; width:100%}
.single_page > h1{color:#333; font-family:Oswald,arial,Georgia,serif; font-size:30px; line-height:1.4em; margin:10px 0 -10px; padding:0 0 4px; text-transform:uppercase}
.post_commentbox{display:inline; float:left; width:100%; border-top:1px solid #ddd; border-bottom:1px solid #ddd; margin-top:20px; padding:5px 0px}
.post_commentbox a, .post_commentbox span{color:#798992; font-size:11px; margin-right:5px}
.post_commentbox a > i, .post_commentbox span > i{margin-right:5px}
.breadcrumb{background-color:#303030; border-radius:0}
.breadcrumb li a{color:#fff}
.single_page_content{display:inline; float:left; padding-top:20px; width:100%; border-bottom:1px solid #ddd; padding-bottom:20px}
.single_page_content > img{max-width:100%;/* width:320px; height:213px; margin-bottom:15px */}
.single_page_content ul{position:relative; padding-left:25px}
.single_page_content ul li{line-height:25px}
.single_page_content ul li:before{content:""; height:5px; left:5px; position:absolute; width:9px; margin-top:8px}
.single_page_content ul li:hover{opacity:0.75}
.single_page_content h2{line-height:35px}
.single_page_content h3{line-height:30px}
.single_page_content h4{line-height:25px}
.single_page_content h4{line-height:20px}
.social_link{display:inline; float:left; margin-bottom:25px; margin-top:20px; width:100%}
.sociallink_nav{text-align:center}
.sociallink_nav li{display:inline-block}
.sociallink_nav li a{color:#fff; display:inline-block; font-size:17px; padding:8px 12px; margin:0 3px; -webkit-transition:all 0.5s; -o-transition:all 0.5s; transition:all 0.5s}
.sociallink_nav li a:hover{-webkit-transform:rotate(50deg); -moz-transform:rotate(50deg); -ms-transform:rotate(50deg); -os-transform:rotate(50deg); transform:rotate(50deg)}
.sociallink_nav li a:hover i{-webkit-transform:rotate(-50deg); -moz-transform:rotate(-50deg); -ms-transform:rotate(-50deg); -os-transform:rotate(-50deg); transform:rotate(-50deg)}
.sociallink_nav li:nth-child(1) > a{background:none repeat scroll 0 0 #3b5998; padding:8px 15px}
.sociallink_nav li:nth-child(2) > a{background:none repeat scroll 0 0 #00acee}
.sociallink_nav li:nth-child(3) > a{background:none repeat scroll 0 0 #dd4b39}
.sociallink_nav li:nth-child(4) > a{background:none repeat scroll 0 0 #0e76a8}
.sociallink_nav li:nth-child(5) > a{background:none repeat scroll 0 0 #c92228}
.related_post{display:inline; float:left; margin-top:0; width:100%; margin-bottom:20px}
.related_post > h2{border-bottom:1px solid #e3e3e3; padding-bottom:5px}
.related_post > h2 i{font-size:25px}
.related_post .spost_nav li{width:32%; margin-right:10px}
.related_post .spost_nav li:last-child{margin-right:0}
.nav-slit a{position:fixed; top:50%; display:block; outline:none; text-align:left; z-index:1000; -webkit-transform:translateY(-50%); transform:translateY(-50%)}
.nav-slit a.prev{left:0}
.nav-slit a.next{right:0}
.nav-slit .icon-wrap{position:relative; display:block; padding:45px 5px}
.nav-slit .icon-wrap i{color:#fff; font-size:40px; display:inline-block}
.nav-slit div{position:absolute; top:0; width:200px; height:100%; background-color: #ffffff; -webkit-transition:-webkit-transform 0.3s 0.3s; transition:transform 0.3s 0.3s; -webkit-perspective:1000px; perspective:1000px}
.nav-slit a.prev div{left:0; -webkit-transform:translateX(-100%); transform:translateX(-100%)}
.nav-slit a.next div{right:0; text-align:right; -webkit-transform:translateX(100%); transform:translateX(100%)}
.nav-slit h3{position:absolute; top:100%; margin:0; padding:0 20px; height:30%; color:#fff; text-transform:uppercase; letter-spacing:1px; font-weight:500; font-size:0.75em; line-height:2.75; width:200px; text-align:left; overflow:hidden; padding-top:4px; -webkit-transition:-webkit-transform 0.3s; transition:transform 0.3s; -webkit-transform:rotateX(-90deg); transform:rotateX(-90deg); -webkit-transform-origin:50% 0; transform-origin:50% 0; -webki-backface-visibility:hidden; -webkit-backface-visibility:hidden; backface-visibility:hidden}
.nav-slit img{left:0; position:absolute; top:0; /*width:100%; width:200px;*/ height:130px}
.nav-slit a:hover div{-webkit-transform:translateX(0); transform:translateX(0)}
.nav-slit a:hover h3{-webkit-transition-delay:0.6s; transition-delay:0.6s; -webkit-transform:rotateX(0deg); transform:rotateX(0deg)}
.error_page{float:left; display:inline; width:100%; text-align:center}
.error_page > h3{text-transform:uppercase}
.error_page > h1{font-size:110px}
.error_page > p{font-size:15px; margin:0 auto; width:80%; margin-bottom:40px}
.error_page > span{display:inline-block; height:2px; text-align:center; width:100px}
.error_page > a{color:#fff; display:inline-block; padding:5px 10px; margin-bottom: 25px;}
.error_page > a:hover{opacity:0.75}
.contact_area{float:left; display:inline; width:100%; margin-bottom:30px}
.contact_area > h2{color:#fff; display:inline-block; font-size:20px; padding:7px 10px 5px; text-transform:uppercase; margin-bottom:30px}
.contact_area > p{margin-bottom:20px}
.contact_form input[type="text"], .contact_form input[type="email"], .contact_form textarea{border-radius:0; margin-bottom:30px}
.contact_form input[type="submit"]{border:medium none; color:#fff; height:35px; padding:5px 10px; -webkit-transition:all 0.5s; -o-transition:all 0.5s; transition:all 0.5s}
.contact_form input[type="submit"]:hover{border:1px solid #d083cf}
.product-overlay{
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    height: 100%;
    width: 100%;
    opacity: .2;
    transition: .5s ease;
    background-color: #008CBA;
    z-index: 2;
}
/* ... */

